syntax = "proto3";

package chain.middleware.fiat.currency.history.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/chain/middleware/v1/fiat/currency/history";

import "basetypes/v1/conds.proto";
import "chain/middleware/v1/fiat/currency/currency.proto";

message Conds {
  optional basetypes.v1.StringVal EntID = 10;
  optional basetypes.v1.StringVal FiatID = 20;
  optional basetypes.v1.StringSliceVal FiatIDs = 30;
  optional basetypes.v1.Uint32Val StartAt = 40;
  optional basetypes.v1.Uint32Val EndAt = 50;
}

